<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    style="@style/CardView.Light"
    android:elevation="8dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    app:cardCornerRadius="20dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/top"
        />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/top_1"
        android:textColor="@color/dark_brown"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins"
        android:text="@string/medium"
        android:textColor="@color/dark_brown"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/poppins"
        android:text="@string/p150_00"
        android:textColor="@color/dark_brown"
        android:textSize="16sp" />

    <ImageButton
        android:layout_width="22dp"
        android:layout_height="20dp"
        android:layout_gravity="bottom|end"
        android:background="@drawable/filled_heart"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"/>

</androidx.cardview.widget.CardView>