<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/light_gray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/top"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins"
            android:text="@string/top_1"
            android:textColor="@color/dark_brown"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins"
            android:text="@string/medium"
            android:textColor="@color/dark_brown"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="110dp"
            android:fontFamily="@font/poppins"
            android:text="@string/p150_00"
            android:textColor="@color/dark_brown"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/heart2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginStart="350dp"
            android:src="@drawable/heart_no_color"
            />



    </RelativeLayout>

</androidx.cardview.widget.CardView>