<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Categories"
    android:background="@color/light_brown"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/categories"
            android:textColor="@color/dark_brown"
            android:textSize="26sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="360dp"
                android:layout_height="30dp"
                android:src="@drawable/search_bar"
                android:layout_marginStart="20dp"
                android:layout_centerHorizontal="true"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/filled_tops"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                android:layout_marginStart="25dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="180dp"
                        android:layout_height="30dp"
                        android:src="@drawable/tops_bottoms"
                        tools:ignore="ContentDescription"
                        />
                    <TextView
                        android:id="@+id/categories_tops"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="65dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/tops"
                        android:textColor="@color/dark_brown"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/categories_bottoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:fontFamily="@font/poppins"
                android:text="@string/bottoms"
                android:textColor="@color/dark_brown"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/top"
                android:layout_marginStart="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins"
                android:text="@string/top_1"
                android:textColor="@color/dark_brown"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/poppins"
                android:text="@string/medium"
                android:textColor="@color/dark_brown"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="110dp"
                android:fontFamily="@font/poppins"
                android:text="@string/p150_00"
                android:textColor="@color/dark_brown"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/heart2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:layout_marginStart="320dp"
                android:src="@drawable/heart_no_color"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/item_image2"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/top"
                android:layout_marginStart="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins"
                android:text="@string/top_1"
                android:textColor="@color/dark_brown"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/poppins"
                android:text="@string/medium"
                android:textColor="@color/dark_brown"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="110dp"
                android:fontFamily="@font/poppins"
                android:text="@string/p150_00"
                android:textColor="@color/dark_brown"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/heart_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:layout_marginStart="320dp"
                android:src="@drawable/heart_no_color"
                />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginStart="20dp">

            <ImageView
                android:id="@+id/item_image3"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/top"
                android:layout_marginStart="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins"
                android:text="@string/top_1"
                android:textColor="@color/dark_brown"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/poppins"
                android:text="@string/medium"
                android:textColor="@color/dark_brown"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="110dp"
                android:fontFamily="@font/poppins"
                android:text="@string/p150_00"
                android:textColor="@color/dark_brown"
                android:textSize="16sp" />
            <ImageView
                android:id="@+id/heart_item3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:layout_marginStart="320dp"
                android:src="@drawable/heart_no_color"
                />

        </RelativeLayout>

    </RelativeLayout>


    <FrameLayout
        android:id="@+id/pop_up_tops"
        android:layout_width="380dp"
        android:layout_height="670dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="15dp"
        android:visibility="invisible">

    </FrameLayout>
    <FrameLayout
        android:id="@+id/pop_up_bottoms"
        android:layout_width="380dp"
        android:layout_height="670dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="15dp"
        android:visibility="invisible">

    </FrameLayout>


</RelativeLayout>

