<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#CCBFB4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:src="@drawable/search_bar"
                android:layout_marginTop="70dp"
                android:layout_marginStart="20dp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/round_search"
                android:layout_marginTop="73dp"
                android:layout_marginStart="28dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/search"
                android:textColor="@color/dark_brown"
                android:layout_marginTop="75dp"
                android:layout_marginStart="60dp"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginStart="25dp"
            android:src="@drawable/heart_icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="360dp"
                android:layout_height="30dp"
                android:src="@drawable/search_bar"
                android:layout_marginStart="20dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="85dp"
                android:fontFamily="@font/poppins"
                android:text="@string/tops"
                android:textAlignment="center"
                android:textColor="@color/dark_brown"
                android:textSize="20sp"
                android:clickable="true" />
            <TextView
                android:id="@+id/bottoms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="250dp"
                android:fontFamily="@font/poppins"
                android:text="@string/bottoms"
                android:textColor="@color/dark_brown"
                android:textSize="20sp"
                android:clickable="true"/>

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/heart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="350dp"
        android:src="@drawable/heart_no_color"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="350dp"
        android:layout_height="550dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="30dp"/>





    <FrameLayout
        android:id="@+id/pop_up_container"
        android:layout_width="380dp"
        android:layout_height="670dp"
        android:layout_marginTop="180dp"
        android:layout_marginStart="15dp"
        android:visibility="invisible">

    </FrameLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        app:cardCornerRadius="20dp">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:background="@drawable/search_bar"
        app:menu="@menu/bottom_menu"
        app:itemIconSize="60dp"

        >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.cardview.widget.CardView>

</RelativeLayout>